--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="estilos.css">
-        <title> FUNtasies </title>
-        <link rel="icon" href="imagenes/logo.png" type="image/x-icon">
+        <title> Hospital </title>
+        <link rel="icon" href="imagenes/hospital.jpg" type="image/x-icon">
     </head>
     <body>
         
@@ -13,7 +13,7 @@
             <div class="inici" id="inici">
                     <!-- Imagen portada -->
                     <div class=" fotos ">
-                        <img src="imagenes/portada.png">
+                        <img src="imagenes/hospital.jpg">
                     </div>
 
                 <!-- Navegador de la web -->
