--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="inici" id="inici">
                     <!-- Imagen portada -->
                     <div class=" fotos ">
-                        <img src="imagenes/hospital.jpg">
+                        <img src="imagenes/hospital.png">
                     </div>
 
                 <!-- Navegador de la web -->
@@ -35,8 +35,8 @@
                 </div>
                     <!-- Titulo y slogan -->
                     <div class="titul">
-                        <h1> FUNtasies </h1>
-                        <p class="slogan"> Descobreix, apren i diverteix-te: Oferim tallers <span> FUNtastics </span> per a infants</p>
+                        <h1> Hospital Rama </h1>
+                        <p class="slogan"> La teva salut en mans segures. </p>
                     </div>
             </div>
         <!-- Transicion de olas -->
