--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="estilos.css">
-        <title> Hospital </title>
-        <link rel="icon" href="imagenes/hospital.jpg" type="image/x-icon">
+        <title> SL. RAMA </title>
+        <link rel="icon" href="imagenes/hospital.png" type="image/x-icon">
     </head>
     <body>
         
