--- a/index.html
+++ b/index.html
@@ -107,8 +107,6 @@
                         <ul class="p1">
                             <li><span>Professionals Qualificats:</span>  </li><p>El nostre equip està format per educadors, psicòlegs i pedagogs amb una àmplia experiència en el camp de l&apos;educació Infantil.</p>
                             <li><span>Benestar social dintre de l&apos;aula:</span>  </li><p> Garantim un benestar social entre tots els infants i estimulant on els infants aprenen i creixen.</p>
-                            <li><span>Metodologia innovadora:</span> </li><p> Utilitzem mètodes d&apos;ensenyament moderns complementats amb antics adaptats a les necessitats dels infants.</p>
-                            <li><span> Flexibilitat Horària:</span> </li><p>Oferim tallers en diferents horaris per adaptar-nos a les necessitats de les famílies i les escoles.
                             </p>
                         </ul>
                     </div>
@@ -127,13 +125,11 @@
                     </iframe>            
                 </div>
                 <div class="contact-info">
-                    <h1 class="inf"> Contactes </h1>
+                    <h1 class="inf"> Informació </h1>
                     <p><strong>Dirección:</strong> Carrer del Doctor Almera, 33, 08205 Sabadell, Barcelona</p>
                     <p><strong>Teléfono:</strong> 937 25 90 99</p>
                     <p><strong> Correus:</strong></p>
                     <p> <strong> → </strong> manelra@jviladoms.cat</p>
-                    <p> <strong> → </strong>elpeva@jviladoms.cat</p>
-                    <p> <strong> → </strong>adarsa@jviladoms.cat</p>
                     <!-- iconos web --> 
                     <ul class="example-2">
                     <li class="icon-content">
