--- a/index.html
+++ b/index.html
@@ -94,13 +94,7 @@
                             </p>
                     </div>
                     <div class="box2">
-                        <p class="t1">Tallers</p>
-                        <div class="act">
-                            <p>Estacions de l&apos;any</p>
-                            <p>Monstre dels colors</p>
-                            <p>Pluja de colors</p>
-                            <p> Tressor de Can Feu </p>
-                        </div>
+                        <img src="imagenes/sala.png">
                     </div>
                     <div class="box3">
                         <p class="t1">Per qué triar-nos?</p>
