media para movil

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title> SL. RAMA </title>
         <link rel="icon" href="imagenes/hospital.png" type="image/x-icon">
     </head>
+    
     <body>
         
         <div class="start">
@@ -21,7 +22,7 @@
                     <nav>
                         <!-- Botón del menú hamburguesa, que estará alineado al centro -->
                         <div class="menu-toggle" id="mobile-menu">
-                            <a href="web-act.html">Tallers</a>
+                            <div class="heart" id="heart"></div>
                         </div>
                         <!-- Lista de navegación -->
                         <ul class="nav-list" id="nav-list">
@@ -94,7 +95,7 @@
                             </p>
                     </div>
                     <div class="box2">
-                        <img src="imagenes/sala.png">
+                        <img src="imagenes/sala.png"
                     </div>
                     <div class="box3">
                         <p class="t1">Per qué triar-nos?</p>
