modificaciones finales de la web cliente sin media

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                         <ul class="nav-list" id="nav-list">
                             <li><a href="index.html">Inici</a></li>
                             <li><a href="#secciones">Sobre nosaltres</a></li>
-                            <li><a href="#queoferim">Que oferim?</a></li>
-                            <li><a href="web-act.html">Tallers</a></li>
+                            <li><a href="#queoferim">La teva salut</a></li>
                             <li><a href="#final">Contactes</a></li>
                         </ul>
                     </nav>
@@ -53,20 +52,19 @@
                 </div>
                 <div class="carts">
                     <div class="card">
-                        <p class="card-title">Aque ens dediquem?</p>
+                        <p class="card-title">La Nostra Missió</p>
                         <p class="small-desc">
-                            Empresa que ofereix tallers educatius en l&apos;àmbit formal i no formal per a infants de 3-6 anys.
-                            Creem tallers que implementarem als centres que ens contracten.
-                            Lúdica AFI, ... Que estigui dedicada als infants.
-                        </p>
+                            La nostra missió és proporcionar solucions innovadores que millorin la qualitat de vida de les nostres comunitats.
+                            Ens dediquem a oferir productes i serveis accessibles i sostenibles, promovent un futur més verd i responsable.                        </p>
                         <div class="go-corner">
                         <div class="go-arrow">→</div>
                         </div>
                     </div>
                     <div class="card4">
-                        <p class="card-title">A qui va dirigit</p>
+                        <p class="card-title">El Nostre Equip</p>
                         <p class="small-desc">
-                            El meu servei va dirigit per tots aquells infants d&apos;etapa infantil dintre de l&apos;àmbit formal i no formal.
+                            El nostre equip està format per experts apassionats en les seves àrees d'especialització.
+                            Cada membre aporta una diversitat de talents i una visió compartida cap a la innovació i el compromís social.
                         </p>
                         <div class="go-corner1">
                         <div class="go-arrow">→</div>
@@ -89,19 +87,25 @@
                     <div class="box1">
                         <p class="t1">Que oferim?</p>
                             <p class="p1">
-                            Som una empresa que ofereix tallers educatius en l&apos;àmbit formal i no formal per a infants de 3-6 anys-
-                            A FUNtasies, ens apassiona fomentar el desenvolupament integral dels infants a través de tallers innovadors i divertits.
-                            Creiem que l&apos;educació ha de ser una experiència enriquidora i emocionant, per això oferim una àmplia varietat de tallers dissenyats per estimular la curiositat i la creativitat dels vostres infants.
+                                Oferim una gamma de productes i serveis dissenyats per satisfer les necessitats de les nostres comunitats, incloent:
+                                <ul class="list-box">
+                                    <li>Productes Sostenibles: Materials respectuosos amb el medi ambient.</li>
+                                    <li>Serveis Personalitzats: Adaptats a les necessitats específiques de cada client.</li>
+                                    <li>Innovació Constant: Assessorament i solucions adaptades a les noves tecnologies.   </li>
+                                </ul>
                             </p>
                     </div>
                     <div class="box2">
                         <img src="imagenes/sala.png"
                     </div>
+                </div>
                     <div class="box3">
                         <p class="t1">Per qué triar-nos?</p>
+                        <p>  Escollir-nos significa optar per un partner compromès amb la qualitat i la sostenibilitat. Algunes de les raons per les quals som la millor elecció són:</p>
                         <ul class="p1">
-                            <li><span>Professionals Qualificats:</span>  </li><p>El nostre equip està format per educadors, psicòlegs i pedagogs amb una àmplia experiència en el camp de l&apos;educació Infantil.</p>
-                            <li><span>Benestar social dintre de l&apos;aula:</span>  </li><p> Garantim un benestar social entre tots els infants i estimulant on els infants aprenen i creixen.</p>
+                            <li><span>Experiència:</span>  Més de 10 anys al sector, amb un equip de professionals experts.</li>
+                            <li><span>Compromís Social:</span> Participem activament en iniciatives comunitàries i ambientals.</li>
+                            <li><span>Atenció Personalitzada:</span> Cada client és únic per a nosaltres, i ens esforcem per oferir un servei adaptat a les seves necessitats. </li>
                             </p>
                         </ul>
                     </div>
