finalizacion de los medias de la web

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                                 </ul>
                             </p>
                     </div>
+                    <div class="box2-shadow">
+                        <img src="imagenes/salud.png">
+                    </div>
                     <div class="box2">
                         <img src="imagenes/sala.png"
                     </div>
